<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Регистрация"
        android:layout_gravity="center"
        android:textSize="35dp"
        android:layout_marginTop="10dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/Name"
                android:textSize="25sp"/>
            <EditText
                android:id="@+id/Surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/Surname"
                android:textSize="25sp"/>
            <EditText
                android:id="@+id/Patronymic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/Patronymic"
                android:textSize="25sp"/>



        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/buttonRegistration2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Registration"
        android:background="@drawable/butt"
        android:textColor="#FFFFFF"
        android:layout_marginRight="7dp"
        android:layout_marginLeft="7dp"/>


</LinearLayout>